--- a/index.html
+++ b/index.html
@@ -67,33 +67,29 @@
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
-</style>
 
-<script>
-  const secondHand = document.querySelector('.second-hand');
-  const minsHand = document.querySelector('.min-hand');
-  const hourHand = document.querySelector('.hour-hand');
+  </style>
 
-  function setDate() {
-    const now = new Date();
-
-    const seconds = now.getSeconds();
-    const secondsDegrees = ((seconds / 60) * 360) + 90;
-    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-
-    const mins = now.getMinutes();
-    const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
-    minsHand.style.transform = `rotate(${minsDegrees}deg)`;
-
-    const hour = now.getHours();
-    const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
-    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-  }
-
-  setInterval(setDate, 1000);
-
-  setDate();
-
-</script>
+  <script>
+    const secondsHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hoursHand = document.querySelector('.hour-hand');
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = 6*seconds + 90;
+      secondsHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      const mins = now.getMinutes();
+      const minsDegrees = 6*mins + 90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+      const hours = now.getSeconds();
+      const hoursDegrees = 6*hours + 90;
+      hoursHand.style.transform = `rotate(${hoursDegrees}deg)`;
+      // console.log(seconds);
+    }
+    setInterval(setDate, 1000);
+    
+    
+  </script>
 </body>
 </html>
